<resources>
    <string name="app_name">Radio Kol Etsion</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="firstScreenMassage">Listen to Kol Etsion Radio.</string>
    <string name="title" translatable="false">
        <u>Title...</u>
    </string>
    <string name="contentShow" translatable="false">
        ערן זרחוביץ\', שרון טייכר , ימי ראשון עד חמישי, 16:00 עד 18:00,
        תכנית המערכונים והסאטירה של שרון טייכר וערן זרחוביץ\'
        1/1/19 50 דקןת
    </string>
    <string name="dbUrl" translatable="false">https://eco99fm.maariv.co.il/music_channel/1152.aspx</string>

    <string name="title_playlist" translatable="false">PlayList</string>
    <string name="title_profile" translatable="false">Profile</string>
    <string name="title_music" translatable="false">Music</string>
    <string name="action_search" translatable="false">Search</string>

    <string name="skip_txt"><u>skip and sign in later</u></string>
    <string name="label_pause">pause</string>
    <string name="label_next">next</string>
    <string name="label_previous">previous</string>
    <string name="label_play">play</string>
    <string name="search_hint">Search</string>

    <string name="nav_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="nav_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="login_required_msg">Must be logged in to do those stuff</string>
    <string name="confirm_logout_msg">Are you sure you want to logout?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="music">Music</string>
    <string name="non_playing">No media currently playing</string>
    <string name="signout">Sign out</string>
    <string name="no_internet">Internet Missing</string>
    <string name="no_internet_conn">No internet connection</string>
    <string name="ok">Ok</string>
    <string name="try_again">Try again</string>
    <string name="cant_sign_out">Can\'t sign out !</string>
    <string name="search_something">Search Something...</string>
    <string name="likes_txt">Likes</string>
    <string name="share_poscast">Share Podcast</string>
    <string name="check_out_pod">Check out this Podcast -</string>
    <string name="exist_in_fav">Already on favorites</string>
    <string name="added_to_fav">Added to favorites</string>
    <string name="removed_fav">Removed from favorites</string>
    <string name="about_app">About app</string>
    <string name="about">Creators: Eran karaso,Yehonatan Shani. Made for Beit Ekshtain</string>
    <string name="login">Login</string>
    <string name="about_title">About</string>
    <string name="my_stuff">My stuff</string>
    <string name="extra">Extra</string>
    <string name="no_guest">Nope, guest</string>
    <string name="guest">Guest</string>


    <!--facebook login essentials-->
    <string name="facebook_app_id" translatable="false">267528433962342</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb267528433962342</string>

    <string name="facebook_application_id" translatable="false">267528433962342</string>
    <!--Facebook Application ID, prefixed by 'fb'. Enables Chrome Custom tabs.-->
    <string name="facebook_login_protocol_scheme" translatable="false">fb267528433962342</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_google">Login with google</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>

</resources>
